src/app/layouts/main-layout/main-layout.scss
@use '../../../styles/variables' as *;

.app-layout {
    min-height: 100vh;
}

app-nav-bar {
    position: fixed;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 10;
}

.app-content {
    padding-bottom: 90px;
}

.content {
    padding: 16px 16px 0;
    background-color: $main-white;
    min-height: calc(100dvh - $header_height_mobile - 90px);
}

@media (min-width: 1024px) {
    .app-layout {
        display: grid;
        grid-template-columns: 232px 1fr;
    }

    app-nav-bar {
        display: block;
        position: sticky;
        top: 0;
        align-self: start;
        left: auto;
        right: auto;
        bottom: auto;
        height: 100dvh;
        z-index: 10;
    }

    .app-content {
        padding-bottom: 0;
    }

    .content {
        min-height: calc(100dvh - $header_height_desktop);
    }
}

